snake game css updated

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
    <style>
        body{
            margin: 0px;
+           margin-top:200px;
            padding: 0px;
            display: flex;
             flex-direction: column; /* arrage items on top of the other */
@@ -20,7 +21,8 @@
        }
    </style>
 </head>
-<body>
+<body style="background-color: yellow">
+     <h1>Snake Game</h1>
     <canvas id="game" width="400" height="400"/>
     <script src="index.js"></script>
 </body>
